--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "queue-that",
   "version": "2.9.0",
   "description": "A queue managed in localStorage for async tasks that may run immediately before page unload.",
-  "main": "lib/queue-that.js",
+  "main": "lib/queue-that.ts",
+  "type": "module",
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "dev": "tsc -w"
   },
   "repository": {
     "type": "git",
@@ -20,24 +22,14 @@
   },
   "homepage": "https://github.com/QubitProducts/queue-that#readme",
   "dependencies": {
-    "driftwood": "^1.1.0",
-    "json-bourne": "^1.0.0"
+    "consola": "^3.2.3",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
-    "inject-loader": "^2.0.1",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-expect": "^1.1.1",
-    "karma-mocha": "^0.2.1",
-    "karma-safari-private-launcher": "^1.0.0",
-    "karma-sinon": "^1.0.4",
-    "karma-sourcemap-loader": "^0.3.6",
-    "karma-spec-reporter": "0.0.23",
-    "karma-webpack": "^1.7.0",
-    "phantomjs-prebuilt": "^2.1.6",
-    "sinon": "1.17.3",
-    "standard": "^8.0.0",
-    "underscore": "^1.8.3",
-    "webpack": "^1.12.9"
+    "@eslint/js": "^9.7.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^8.57.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.16.1"
   }
 }
